--- a/css/cards.css
+++ b/css/cards.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Avenir Next|Proxima Nova");
+
+
 .card {
 	width: 18em;
 	opacity: 0.5;
@@ -11,7 +14,6 @@
 	align-self: center;
 	height: 50%;
 	width: 50%;
-	border-radius: 50%;
 	margin-top: 5%;
 }
 
@@ -23,25 +25,51 @@
     transition: 1s ease;
 }
 
-#first {
+
+#instagram {
 	margin-top: 2%;
+	font-family: Proxima Nova;
 }
 
-#first .show {
+#instagram img {
+	border-radius: 50%;
+}
+
+#instagram .show {
 	display: none;
 }
 
-#first:hover {
+#instagram:hover {
 	color: #FFFFFF;
 	background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
 }
 
-#first:hover .show {
+#instagram:hover .show {
 	display: inline;
 }
 
-#first:hover .normal {
+#instagram:hover .normal {
 	display: none;
 }
 
+
+#snapchat {
+	font-family: Avenir Next;
+}
+
+#snapchat .show {
+	display: none;
+}
+
+#snapchat:hover {
+	background: #FFFC00;
+}
+
+#snapchat:hover .show {
+	display: inline;
+}
+
+#snapchat:hover .normal {
+	display: none;
+}
 
