--- a/css/cards.css
+++ b/css/cards.css
@@ -3,14 +3,14 @@
 
 @media only screen and (max-width: 1100px) {
 	.card {
-		margin: 20% 0%;
+		margin: 20% 0% 20% 0%;
 		width: 16em;
 	}
 }
 
 @media only screen and (min-width: 1101px) {
 	.card {
-		margin: 5% 0%;
+		margin: 5% 0% 5% 0%;
 		width: 18em;
 	}
 }
