--- a/css/cards.css
+++ b/css/cards.css
@@ -1,6 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Avenir Next|Proxima Nova");
-
-
 @media only screen and (max-width: 1100px) {
 	.card {
 		margin: 20% 0% 20% 0%;
@@ -10,8 +7,20 @@
 
 @media only screen and (min-width: 1101px) {
 	.card {
-		margin: 5% 0% 5% 0%;
+		margin: 12% 0% 12% 0%;
 		width: 18em;
+	}
+}
+
+@media only screen and (min-width: 1800px) {
+	.card {
+		margin: 5% 0% 5% 0%;
+	}
+}
+
+@media only screen and (min-width: 2000px) {
+	.card {
+		margin: 2% 0% 2% 0%;
 	}
 }
 
