--- a/css/cards.css
+++ b/css/cards.css
@@ -44,8 +44,9 @@
     -ms-transform: scale(1.1);
     transform: scale(1.1);
     transition: 1s ease;
-}
+    box-shadow: 0 0 15px #000000;
 
+}
 
 #instagram {
 	margin-top: 2%;
@@ -72,7 +73,6 @@
 #instagram:hover .normal {
 	display: none;
 }
-
 
 #snapchat {
 	font-family: Avenir Next;
